--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Amisha Bhanushali
-logo: /assets/img/amisha.jpeg
+logo: /asset/img/amisha.jpeg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
